# boids

./: .env.example  .gitignore  CLAUDE.md  Makefile  alembic.ini  pyproject.toml
.claude/: settings.local.json
app/: config.py  dependencies.py  main.py
app/agents/copywriter/: agent.py
app/agents/lead_finder/: normalizer.py
app/agents/scheduler/: __init__.py  intent_classifier.py
app/auth/: router.py
app/campaigns/: router.py  service.py
app/core/: database.py  redis.py
app/integrations/apollo/: client.py
app/integrations/embeddings/: client.py
app/knowledge/: chunker.py  retrieval.py  schemas.py  service.py
app/leads/: schemas.py  service.py
app/meetings/: __init__.py  models.py
app/outreach/: models.py
app/tenants/: router.py  schemas.py
app/workers/: celery_app.py
backend/: Dockerfile  Makefile  docker-compose.test.yml  docker-compose.yml
backend/app/: config.py  main.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_tenant_isolation.py
dashboard/: .gitignore  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
dashboard/app/: globals.css  layout.tsx  providers.tsx
dashboard/tests/: setup.ts
migrations/: env.py
migrations/versions/: 003_knowledge_documents.py
tests/: conftest.py  test_auth.py
tests/integration/: test_campaigns_api.py  test_dashboard_api.py  test_knowledge_pipeline.py
tests/unit/: conftest.py  test_copywriter_pipeline.py  test_icp_mapper.py  test_lead_normalizer.py  test_lead_service.py  test_qdrant_collection_naming.py  test_research_schemas.py
(+81 files in other folders)
