[tool.poetry]
name = "boids-ai"
version = "0.1.0"
description = "FastAPI Multi-Tenant App with Celery, Redis, and PostgreSQL Schema-based Isolation"
authors = ["Luis Bolivar <luisbolivar.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
redis = "^5.0.3"
celery = "^5.3.6"
bcrypt = "^4.1.2"
PyJWT = "^2.8.0"
cryptography = "^42.0.5"
alembic = "^1.13.1"
python-multipart = "^0.0.9"
anthropic = "^0.40.0"
httpx = "^0.27.0"
openai = "^1.0.0"
qdrant-client = "^1.7.0"
google-api-python-client = "^2.120.0"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
ruff = "^0.4.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: tests that hit real external APIs (Apollo, etc.)"]
